# ai-engineering-copilot

./: .editorconfig  .env.example  .gitignore  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: api-spec.md  architecture.md  database-schema.md  rag-pipeline.md
docs/prompts/: 30_day_roadmap.md  60_day_roadmap.md  ai_engineering_copilot_prompt.md  git_repo_setup_prompt.md
scripts/: reset-db.sh  seed.sh  setup.sh
src/backend/Properties/: launchSettings.json
src/ml/: .dockerignore  Dockerfile  README.md  pyproject.toml
src/ml/app/: __init__.py  main.py
src/ml/tests/: test_health.py
