[project]
name = "ai-copilot-ml"
version = "0.1.0"
description = "Python FastAPI ML service for the AI Engineering Copilot (chunking, embedding, retrieval, reranking, generation)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Aiman Hakim Zahari" }]

dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.9,<3.0",
]

# PEP 735 dependency groups — installed by uv via `uv sync --group dev`
# (or `uv sync` by default, which includes the `dev` group).
[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "httpx>=0.27,<0.28",
    "ruff>=0.7,<0.8",
]

[tool.uv]
# Treat the project as an application, not a library. uv will skip
# building it as a wheel and just install dependencies + run scripts.
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
